@@ -4,6 +4,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+A..G...... [ZBX-11146] fixed validation of item update interval 0 (Gunars, Vladislavs)
 .......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
 .......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
